<resources>
    <string name="app_name">Succulent Shop</string>
    <string name="email_or_username">Email or Username</string>
    <string name="password">Password</string>
    <string name="log_in">Log in</string>
    <string name="create_an_account">Create an account</string>
    <string name="this_field_is_required">This field is required.</string>
    <string name="identifier_is_too_short">Identifier is too short.</string>
    <string name="add_to_cart">Add to cart</string>
    <string name="check_your_connection">Please check your connection and try again.</string>
    <string name="retry">Retry</string>
    <string name="unexpected_error_occurred">Unexpected error occurred</string>
    <string name="your_session_is_expired">Your session is expired. Please log in.</string>
    <string name="sign_up">Sign Up</string>
    <string name="already_have_an_account">Already have an account</string>
    <string name="username">Username</string>
    <string name="e_mail">Email</string>
    <string name="emailRequired">Email is required.</string>
    <string name="invalidEmail">Email is invalid.</string>
    <string name="shortPassword">Password is too short.</string>
    <string name="longPassword">Password is too long.</string>
    <string name="badEmailFormat">Password must contain one digit, one uppercase letter, one lowercase letter and one special character.</string>
    <string name="userNameRequired">Username is required.</string>
    <string name="badUserNameFormat">Username can only include a-z, 0-9 and _ characters.</string>
    <string name="shortUserName">Username is too short.</string>
    <string name="longUserName">Username is too long.</string>
    <string name="passwordRequired">Password is required.</string>
    <string name="log_out">Log out</string>
    <string name="related_products_title">Related Products:</string>
    <string name="plant">Plant</string>
</resources>